PP-12619: Throw error if there are multiple live gateway accounts
Throw error if there are multiple live gateway accounts associated with a service.